--- a/exercicios/ex.022/fundo06.html
+++ b/exercicios/ex.022/fundo06.html
@@ -10,7 +10,7 @@
             background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center top;
-            background-repeat: no-repeat;
+            background-repeat: repeat;
             background-size: cover;
         }
 
@@ -27,6 +27,14 @@
 <body>
     <main>
         <h1>Teste de imagem de fundo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo officia, ipsum earum vero dicta, quas minus ad laborum porro eius doloremque autem, molestias consequuntur illum temporibus id aut ea provident?Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste voluptatibus quisquam dolore ad architecto exercitationem eum veritatis, praesentium sit tempore laborum ab tenetur eos perferendis repudiandae repellat quidem. Placeat, officiis!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo officia, ipsum earum vero dicta, quas minus ad laborum porro eius doloremque autem, molestias consequuntur illum temporibus id aut ea provident?Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste voluptatibus quisquam dolore ad architecto exercitationem eum veritatis, praesentium sit tempore laborum ab tenetur eos perferendis repudiandae repellat quidem. Placeat, officiis!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo officia, ipsum earum vero dicta, quas minus ad laborum porro eius doloremque autem, molestias consequuntur illum temporibus id aut ea provident?Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste voluptatibus quisquam dolore ad architecto exercitationem eum veritatis, praesentium sit tempore laborum ab tenetur eos perferendis repudiandae repellat quidem. Placeat, officiis!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo officia, ipsum earum vero dicta, quas minus ad laborum porro eius doloremque autem, molestias consequuntur illum temporibus id aut ea provident?Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste voluptatibus quisquam dolore ad architecto exercitationem eum veritatis, praesentium sit tempore laborum ab tenetur eos perferendis repudiandae repellat quidem. Placeat, officiis!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo officia, ipsum earum vero dicta, quas minus ad laborum porro eius doloremque autem, molestias consequuntur illum temporibus id aut ea provident?Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste voluptatibus quisquam dolore ad architecto exercitationem eum veritatis, praesentium sit tempore laborum ab tenetur eos perferendis repudiandae repellat quidem. Placeat, officiis!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo officia, ipsum earum vero dicta, quas minus ad laborum porro eius doloremque autem, molestias consequuntur illum temporibus id aut ea provident?Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste voluptatibus quisquam dolore ad architecto exercitationem eum veritatis, praesentium sit tempore laborum ab tenetur eos perferendis repudiandae repellat quidem. Placeat, officiis!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo officia, ipsum earum vero dicta, quas minus ad laborum porro eius doloremque autem, molestias consequuntur illum temporibus id aut ea provident?Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste voluptatibus quisquam dolore ad architecto exercitationem eum veritatis, praesentium sit tempore laborum ab tenetur eos perferendis repudiandae repellat quidem. Placeat, officiis!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo officia, ipsum earum vero dicta, quas minus ad laborum porro eius doloremque autem, molestias consequuntur illum temporibus id aut ea provident?Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste voluptatibus quisquam dolore ad architecto exercitationem eum veritatis, praesentium sit tempore laborum ab tenetur eos perferendis repudiandae repellat quidem. Placeat, officiis!</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo officia, ipsum earum vero dicta, quas minus ad laborum porro eius doloremque autem, molestias consequuntur illum temporibus id aut ea provident?Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste voluptatibus quisquam dolore ad architecto exercitationem eum veritatis, praesentium sit tempore laborum ab tenetur eos perferendis repudiandae repellat quidem. Placeat, officiis!</p>
     </main>
 </body>
