--- a/exercicios/ex.022/fundo06.html
+++ b/exercicios/ex.022/fundo06.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Imagem de fundo fixa</title>
     <style>
         body {
             height: 100vh;
-            background-color: black;
-            background-image: url('imagens/wallpaper002.jpg');
-            background-position: center top;
-            background-repeat: repeat;
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
             background-size: cover;
         }
 
-        main {
+/*Shorthand - background
+color > image > position > repeat > [size] > attachment
+*/
+     main {
             background-color: white;
             width: 400px;
             padding: 10px;
