mudanças no desafio 12

--- a/desafios/d012/index.html
+++ b/desafios/d012/index.html
@@ -11,7 +11,7 @@
         <h1>
             Cordel Moderno
         </h1>
-        <p>Por <strong><a href="https://www.recantodasletras.com.br/poesias/3186743">Milton Duarte</a></strong></p>
+        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a></p>
     </header>
     <section class="normal">
         <p>Estou ficando cansado <br>
@@ -23,7 +23,7 @@
     Vou dizer tudo em poesia.</p>
     </section>
     <section class="img1">
-        <p id="cinza">
+        <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
             "Você" só tem duas letras <br>
@@ -76,7 +76,7 @@
         Deixe que Deus interprete.</p>
     </section>
     <footer>
-        Site criado por Allan Fellipe
+        Site criado por <a href="https://github.com/ickyallan" target="_blank">Allan Fellipe</a>
     </footer>
 </body>
 </html>
