--- a/exercicios/ex.023/tabela04.html
+++ b/exercicios/ex.023/tabela04.html
@@ -20,16 +20,16 @@
 <body>
     <table>
         <thead>
-                    <tr>
-                        <th>Grupo</th>
-                        <th>Nomes</th>
-                        <th colspan="3">Filmes</th>
-                    </tr>
-                </thead>
+     <tr>
+        <th scope="col">Grupos</th>
+        <th scope="col">Nomes</th>
+        <th colspan="3" scope="colgroup">Filmes</th>
+     </tr>
+       </thead>
             <tbody>
                 
                 <tr>
-                    <th rowspan="3">Mulheres</th>
+                    <th rowspan="3" scope="rowgroup">Mulheres</th>
                     <td>Ana Maria Santos</td>
                     <td>Alien</td>
                     <td>Rambo</td>
@@ -49,7 +49,7 @@
                 </tr>
                 
                 <tr>
-                    <th rowspan="3">Homens</th>
+                    <th rowspan="3" scope="rowgroup">Homens</th>
                     <td>Bruno Mendonça</td>
                     <td>Intocáveis</td>
                     <td>Amnésia</td>
