--- a/exercicios/ex.024/iframe01.html
+++ b/exercicios/ex.024/iframe01.html
@@ -17,7 +17,7 @@
             <a href="https://ickyallan.github.io/html-css">ickyallan no github</a>
         </iframe> tambem é bem legal</p>
         <p>esse aqui 
-            <iframe src="https://seriesflixtv2.skin/" frameborder="0"></iframe>
+            <iframe src="https://netflix.com" frameborder="0"></iframe>
             tambem é bom</p>
 </body>
 </html>
