--- a/exercicios/ex.024/iframe04.html
+++ b/exercicios/ex.024/iframe04.html
@@ -6,6 +6,10 @@
     <title>Iframe 04</title>
 </head>
 <body>
-    
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis beatae suscipit veniam incidunt eaque nesciunt commodi consequuntur necessitatibus quisquam, sequi sapiente eius et ipsa architecto. Esse sint velit eos deserunt.</p>
+    <iframe src="pag-extras/pag04.html" sandbox="allow-same-origin allow-forms allow-scripts">
+        Seu navegador não é compativel
+    </iframe>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis mollitia explicabo architecto dolores asperiores quod, ipsam laboriosam. Necessitatibus obcaecati excepturi beatae dolores commodi blanditiis eum, non sint dolorem neque dicta!</p>
 </body>
 </html>
