--- a/exercicios/ex.026/mq05/index.html
+++ b/exercicios/ex.026/mq05/index.html
@@ -6,8 +6,9 @@
     <title>Mq 05</title>
     <link rel="stylesheet" href="estilos/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <link rel="stylesheet" href="estilos/media-queries.css">
 </head>
-<body>
+<body onresize="mudouTamanho">
     <header>
         <h1>Media Query</h1>
         <span id="burguer" class="material-symbols-outlined" onclick="clickMenu ()">menu
@@ -44,6 +45,15 @@
           } else {
             itens.style.display = 'block'
           }
+        }
+
+        function mudouTamanho() {
+            if (window.innerWidth >= 768) {
+                itens.style.display = 'block'
+            }
+            else {
+                itens.style.display = 'none'
+            }
         }
     </script>
 </body>
