--- a/exercicios/ex.027/flex02/index.html
+++ b/exercicios/ex.027/flex02/index.html
@@ -9,7 +9,8 @@
         background-color: red;
 
         display: flex;
-        flex-direction: column;
+        flex-flow: row nowrap;
+        justify-content: space-around;
     }
 
     .item {
